projet mise à jour

--- a/POO_meteo_Toulouse.ipynb
+++ b/POO_meteo_Toulouse.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "from __future__ import annotations\n",
+    "# from __future__ import annotations\n",
     "\n",
     "import os\n",
     "import time\n",
